tests/ui/parser/raw/raw-str-unbalanced.stderr
error: too many `#` when terminating raw string
  --> $DIR/raw-str-unbalanced.rs:2:10
   |
LL |     r#""##
   |     -----^
   |     |
   |     this raw string started with 1 `#`
   |
help: remove the extra `#`
   |
LL -     r#""##
LL +     r#""#
   |

error: too many `#` when terminating raw string
  --> $DIR/raw-str-unbalanced.rs:7:9
   |
LL | /     r#"
LL | |       "####
   | |        -^^^
   | |________|
   |          this raw string started with 1 `#`
   |
help: remove the extra `#`s
   |
LL -       "####
LL +       "#
   |

error: expected `;`, found `#`
  --> $DIR/raw-str-unbalanced.rs:10:28
   |
LL | const A: &'static str = r""
   |                            ^
...
LL | #[test]
   | - unexpected token
   |
help: add `;` here
   |
LL | const A: &'static str = r"";
   |                            +

error: too many `#` when terminating raw string
  --> $DIR/raw-str-unbalanced.rs:16:28
   |
LL | const B: &'static str = r""##
   |                         ---^^
   |                         |
   |                         this raw string started with 0 `#`s
   |
help: remove the extra `#`s
   |
LL - const B: &'static str = r""##
LL + const B: &'static str = r""
   |

error: aborting due to 4 previous errors

